# practicalHaskell

./: .gitignore  LICENSE  PracticalHaskell.cabal  Procfile  README.md  stack.yaml
.circleci/: config.yaml  config.yml
app/: MakeElmTypes.hs  MigrateDB.hs  RunBasicServer.hs  RunBlogServer.hs  RunFinalServer.hs  RunSecretServer.hs  Test1.hs  Test10.hs  Test11.hs  Test12.hs  Test2.hs  Test3.hs  Test4.hs  Test5.hs  Test6.hs  Test7.hs  Test8.hs  Test9.hs
db_dumps/: database_1.sql  database_2.sql  database_3.sql
frontend/: elm.json
frontend/src/: ArticlePage.elm  BasicPractice.elm  BasicPracticeTests.elm  BlogLanding.elm  BlogLandingBasic.elm  BlogLandingV2.elm  ElmBridgeTests.elm  HelloWorld.elm  JsonTests.elm  LoginPage.elm  Multipage.elm  PosixJson.elm
frontend/src/final/: App.elm  Model.elm
frontend/src/final/Article/: ArticleModel.elm  ArticleView.elm
frontend/src/final/Landing/: LandingModel.elm  LandingView.elm
frontend/src/final/Login/: LoginModel.elm  LoginView.elm
frontend/src/final/NewArticle/: NewArticleModel.elm  NewArticleView.elm
frontend/src/final/NotFound404/: NotFound404Model.elm  NotFound404View.elm
frontend/src/final/SubmitArticle/: SubmitArticleModel.elm  SubmitArticleView.elm
frontend/static/: main.css
src/: AdvancedAuthServer.hs  AuthServer.hs  BasicServer.hs  BasicServerTypes.hs  BlogServer.hs  CrudServer.hs  Database.hs  FinalServer.hs  JWTHelpers.hs  Lecture10.hs  Lecture11.hs  Lecture3.hs  Lecture4.hs  Lecture5.hs  Lecture6.hs  Lecture7.hs  Lecture8.hs  Lecture9.hs  RestAPIClient.hs  RestServer.hs  Schema.hs  SchemaTypes.hs  SecretServer.hs  Utils.hs
test/: BasicTypes.hs  DatabaseTestUtils.hs  FinalServerTests.hs  Lecture10Tests.hs  Lecture2Tests.hs  Lecture3Tests.hs  Lecture4Tests.hs  Lecture5Tests.hs  Lecture6Tests.hs  Lecture7Tests.hs  Lecture8Tests.hs  Lecture9Tests.hs  PGUtils.hs  TestUtils.hs
