name:           PracticalHaskell
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/PracticalHaskell#readme>
homepage:       https://github.com/jhb563/PracticalHaskell#readme
bug-reports:    https://github.com/jhb563/PracticalHaskell/issues
author:         James Bowen
maintainer:     james@mondaymorninghaskell.me
copyright:      2019 Monday Morning Haskell
license:        OtherLicense
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/jhb563/PracticalHaskell

library
  exposed-modules:
      Database
      Schema
      SchemaTypes
      AdvancedAuthServer
      AuthServer
      BasicServer
      BasicServerTypes
      BlogServer
      CrudServer
      FinalServer
      JWTHelpers
      RestServer
      RestAPIClient
      SecretServer
      Utils
  other-modules:
      Paths_PracticalHaskell
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , aeson
    , bytestring
    , containers
    , esqueleto
    , http-api-data
    , http-client
    , http-client-tls
    , http-media
    , http-types
    , jwt
    , monad-logger
    , mtl
    , persistent
    , persistent-migration
    , persistent-postgresql
    , persistent-template
    , pwstore-fast
    , random
    , servant
    , servant-client
    , servant-client-core
    , servant-server
    , Spock
    , text
    , time
    , uuid
    , vector
    , wai
    , warp
  default-language: Haskell2010

executable migrate-db
  main-is: MigrateDB.hs
  hs-source-dirs:
    app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , PracticalHaskell
  default-language: Haskell2010

executable make-elm-types
  main-is: MakeElmTypes.hs
  hs-source-dirs:
    app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , elm-bridge
    , PracticalHaskell
  default-language: Haskell2010

executable run-blog-server
  main-is: RunBlogServer.hs
  hs-source-dirs:
    app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , PracticalHaskell
  default-language: Haskell2010

executable run-secret-server
  main-is: RunSecretServer.hs
  hs-source-dirs:
    app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , PracticalHaskell
  default-language: Haskell2010

executable run-final-server
  main-is: RunFinalServer.hs
  hs-source-dirs:
    app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , PracticalHaskell
  default-language: Haskell2010

test-suite lecture-2-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Lecture2Tests.hs
  build-depends:
      base
    , hspec
    , http-client
    , http-client-tls
    , servant
    , servant-client
    , text
    , PracticalHaskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite lecture-3-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Lecture3Tests.hs
  other-modules:
  build-depends:
      base
    , hspec
    , http-client
    , http-client-tls
    , servant
    , servant-client
    , text
    , PracticalHaskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite lecture-4-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Lecture4Tests.hs
  other-modules:
    TestUtils
  build-depends:
      base
    , containers
    , directory
    , hspec
    , http-client
    , http-client-tls
    , servant
    , servant-client
    , tasty-hunit
    , text
    , PracticalHaskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite lecture-5-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Lecture5Tests.hs
  build-depends:
      base
    , containers
    , hspec
    , http-client
    , http-client-tls
    , servant
    , servant-client
    , text
    , PracticalHaskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite lecture-6-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Lecture6Tests.hs
  other-modules:
    TestUtils
  build-depends:
      base
    , directory
    , hspec
    , http-client
    , http-client-tls
    , persistent
    , servant
    , servant-client
    , tasty-hunit
    , time
    , PracticalHaskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite lecture-7-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Lecture7Tests.hs
  other-modules:
      TestUtils
  build-depends:
      base
    , directory
    , hspec
    , tasty-hunit
    , PracticalHaskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite lecture-8-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Lecture8Tests.hs
  other-modules:
    TestUtils
  build-depends:
      base
    , directory
    , hspec
    , persistent
    , tasty-hunit
    , text
    , PracticalHaskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite lecture-9-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Lecture9Tests.hs
  build-depends:       base
                     , aeson
                     , persistent
                     , tasty
                     , tasty-hunit
                     , text
                     , time
                     , PracticalHaskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite final-server-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             FinalServerTests.hs
  other-modules:
    TestUtils
  build-depends:       base
                     , hspec
                     , tasty
                     , tasty-hunit
                     , directory
                     , text
                     , time
                     , PracticalHaskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
