name:           PracticalHaskell
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/PracticalHaskell#readme>
homepage:       https://github.com/jhb563/PracticalHaskell#readme
bug-reports:    https://github.com/jhb563/PracticalHaskell/issues
author:         James Bowen
maintainer:     james@mondaymorninghaskell.me
copyright:      2019 Monday Morning Haskell
license:        OtherLicense
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/jhb563/PracticalHaskell

library
  exposed-modules:
      Database
      Schema
      SchemaTypes
      BlogServer
      JWTHelpers
      Utils
  other-modules:
      Paths_PracticalHaskell
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , aeson
    , bytestring
    , containers
    , esqueleto
    , http-api-data
    , http-media
    , http-types
    , jwt
    , monad-logger
    , mtl
    , persistent
    , persistent-migration
    , persistent-postgresql
    , persistent-template
    , pwstore-fast
    , random
    , servant
    , servant-options
    , servant-server
    , text
    , time
    , vector
    , wai
    , warp
  default-language: Haskell2010

executable migrate-db
  main-is: MigrateDB.hs
  hs-source-dirs:
    app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , PracticalHaskell
  default-language: Haskell2010

executable make-elm-types
  main-is: MakeElmTypes.hs
  hs-source-dirs:
    app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , elm-bridge
    , PracticalHaskell
  default-language: Haskell2010

executable run-blog-server
  main-is: RunBlogServer.hs
  hs-source-dirs:
    app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , PracticalHaskell
  default-language: Haskell2010
